<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/pink">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="20dp"
            android:textColor="@color/white"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/profile"
            android:layout_marginTop="55dp"
            android:layout_marginLeft="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/namauser"
            android:textColor="@color/white"
            android:layout_marginTop="55dp"
            android:layout_marginLeft="90dp"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="081242234232"
            android:textColor="@color/white"
            android:layout_marginTop="79dp"
            android:layout_marginLeft="90dp"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/personal_detail"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="150dp"
            android:layout_marginLeft="20dp"
            android:textSize="20sp" />

        <!-- RecyclerView -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="190dp"
            android:layout_marginLeft="-15dp"
            tools:listitem="@layout/item_menu" />

        <TextView
            android:id="@+id/help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_below="@id/rv_menu"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:textSize="20sp" />

        <!-- RecyclerView -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/help"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="-15dp"
            tools:listitem="@layout/item_menu" />

        <!-- Additional TextView -->
        <TextView
            android:id="@+id/kosong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/free"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_below="@id/rv_help"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:textSize="20sp" />

        <!-- RecyclerView -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_free"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/kosong"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="-15dp"
            tools:listitem="@layout/item_menu" />

    </RelativeLayout>
</androidx.core.widget.NestedScrollView>
